# pocketClock

./: README.md
code/waveClock/: CMakeLists.txt  SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py  filelist.txt  ui.c  ui_Screen2.c  ui_img_1415964700.c  ui_img_683590454.c  ui_img_878922401.c  ui_img_logo_png.c  ui_setMenu.c  ui_setTime.c  waveClock.ino
code/waveClock/UI/: CMakeLists.txt  filelist.txt  ui.h  ui_Screen1.c  ui_events.h  ui_font_date.c  ui_font_day.c  ui_font_secs.c  ui_img_602517921.c  ui_setDate.c
code/waveClock/assets/: ui_font_date.fcfg  ui_font_day.fcfg  ui_font_digits.c  ui_font_digits.fcfg  ui_font_secs.fcfg
code/waveClock/components/: OldwaveClock.ino
